tests/conformance/syntax/positive/unicode_identifier_valid.ditt
module Σyntax.Unicode where

postulate C : Cat
δid (x : C) : C = x
