tests/conformance/syntax/negative/split_definition_invalid.ditt
module Syntax.SplitDefinitionBad where

postulate C : Cat
id : (x : C) -> C
id = \x. x
